--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body onload="launchCompiler()">
   <div id="container">
-    <!-- 🌗 Theme Switcher -->
+    <!-- 🌗 Theme Switcher/toggle theme - light and dark -->
     <div id="themeToggleContainer">
       <button class="button" id="themeToggle" onclick="toggleTheme()">🌙 Dark Mode</button>
     </div>
